--- a/branches/wmv0800/Source/WMV_VC100.vcxproj
+++ b/branches/wmv0800/Source/WMV_VC100.vcxproj
@@ -326,6 +326,21 @@ copy "$(QTDIR)\lib\QtGui4.dll" $(OutDir)
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)_$(PlatformName)\moc_%(Filename).cpp"  -DQT_NO_DEBUG -DNDEBUG -D_WINDOWS -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQT_DLL -DQT_GUI_LIB -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_THREAD_SUPPORT "-I." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include" "-I$(QTDIR)\include\ActiveQt" "-I.\release" "-I$(QTDIR)\mkspecs\default" "-I.\GeneratedFiles\$(ConfigurationName)_$(PlatformName)\." "-I." "-I." "-I."</Command>
     </CustomBuild>
     <ClInclude Include="enums.h" />
+    <ClInclude Include="math\math_base.h" />
+    <ClInclude Include="math\math_constants.h" />
+    <ClInclude Include="math\math_matrix.h" />
+    <ClInclude Include="math\math_quaternion.h" />
+    <ClInclude Include="math\math_vector.h" />
+    <ClInclude Include="models\Model_ADT_v18.h" />
+    <ClInclude Include="Models\Model_M2_v09.h" />
+    <ClInclude Include="Models\Model_M2_v00.h" />
+    <ClInclude Include="Models\Model_M2_v04.h" />
+    <ClInclude Include="Models\Model_M2_v08.h" />
+    <ClInclude Include="Models\Model_M2_v10.h" />
+    <ClInclude Include="Model_WMO.h" />
+    <ClInclude Include="Models\Model_WMO_v17.h" />
+    <ClInclude Include="Model_M2.h" />
+    <ClInclude Include="Model_ADT.h" />
     <ClInclude Include="ui_Main_Window_Viewer.h" />
   </ItemGroup>
   <ItemGroup>
