--- a/branches/wmv0800/Source/WMV_VC90.vcproj
+++ b/branches/wmv0800/Source/WMV_VC90.vcproj
@@ -464,6 +464,78 @@
 				RelativePath=".\enums.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Model_ADT.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Model_M2.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Model_WMO.h"
+				>
+			</File>
+			<Filter
+				Name="Math"
+				>
+				<File
+					RelativePath=".\Math\math_base.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Math\math_constants.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Math\math_matrix.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Math\math_quaternion.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Math\math_vector.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Models"
+				>
+				<File
+					RelativePath=".\Models\Model_ADT_v18_1.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_ADT_v18_2.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_M2_v00.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_M2_v04.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_M2_v08.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_M2_v09.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_M2_v10.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Models\Model_WMO_v17.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Generated Files"
