--- a/branches/wmv0800_Plugin/Source/Application/Application.vcxproj
+++ b/branches/wmv0800_Plugin/Source/Application/Application.vcxproj
@@ -178,12 +178,10 @@ copy $(QTDIR)\bin\QtGui4.dll ..\$(OutDir)</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Logging.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Settings.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Logging.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Settings.h" />
   </ItemGroup>
@@ -196,6 +194,9 @@ copy $(QTDIR)\bin\QtGui4.dll ..\$(OutDir)</Command>
     </ProjectReference>
     <ProjectReference Include="..\Engine\Engine_VC100.vcxproj">
       <Project>{49c39452-ef73-4a8b-a11b-7959310ca556}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Foundation\Foundation.vcxproj">
+      <Project>{583dceed-978b-493d-b7f3-b54718c46ec3}</Project>
     </ProjectReference>
     <ProjectReference Include="..\Interface_Cinema\Interface_Cinema_VC100.vcxproj">
       <Project>{be2e8a7f-8afd-4a57-a0c1-709532446b06}</Project>
